@startuml
class Biblioteca {
    - String nombre
    - ArrayList<Libro> libros
    + Biblioteca(String nombre)
    + void addLibro(Libro libro)
    + void deleteLibro(String titulo)
    + ArrayList<Libro> getLibros()
    + String getNombre()
}

class Libro {
    - String titulo
    - Persona autor
    - String editorial
    - String isbn
    - int anio
    + Libro(String titulo, Persona autor, String editorial, String isbn, int anio)
    + String getTitulo()
    + String toString()
    + int compareTo(Libro otro)
}

class Persona {
    - String nombre
    - String apellido
    - Fecha fechaNacimiento
    + Persona(String nombre, String apellido, Fecha fechaNacimiento)
    + String toString()
}

class Fecha {
    - int dia
    - int mes
    - int anio
    + Fecha(int dia, int mes, int anio)
    + String toString()
}

Biblioteca "1" *-- "many" Libro
Libro "1" *-- "1" Persona
Persona "1" *-- "1" Fecha
@enduml
